Update Danh sách đề thi công khai

--- a/quiz_app/templates/quiz_app/dashboard.html
+++ b/quiz_app/templates/quiz_app/dashboard.html
@@ -94,7 +94,7 @@
                 </div>
                 {% if public_quizzes|length > 0 %}
                 <div class="text-center mt-3">
-                    <a href="{% url 'guest_homepage' %}#guest-actions" class="btn btn-sm btn-outline-primary">Xem tất cả...</a>
+                    <a href="{% url 'public_quiz_list' %}" class="btn btn-sm btn-outline-primary">Xem tất cả...</a>
                 </div>
                 {% endif %}
             </div>
